ex_2.2/todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-storage
          persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app
          image: todo_app:todo_app_ex_2.2
          volumeMounts:
            - name: todo-app-storage
              mountPath: /usr/src/app/files
          ports:
            - containerPort: 3000
